Fix wrong color for h2 in staging-warning banner.

--- a/totalimpactwebapp/static/less/main.less
+++ b/totalimpactwebapp/static/less/main.less
@@ -173,6 +173,7 @@ body.staging {
          display: inline;
          font-size:  20px;
          margin-right: 10px;
+         color: #fff;
       }
       a {
          color:  #fff;
